--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Abdurrahim Kaplan Personal Home Page</title>
     <meta name="description" content="This page created for CS472 course. Abdurrahim Kaplan Labs.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <![endif]-->
     <div class="main-container">
         <div class="personal-info">
-            <img class="avatar" src="images/photo.png" alt="profile pic"> <br>
+            <img class="avatar" src="photo.png" alt="profile pic"> <br>
             <p class="name">Abdurrahim Kaplan</p>
             <hr>
             <p>
@@ -29,9 +29,9 @@
             </p>
             <hr>
             <div class="social-media">
-                <a href="https://instagram.com/akaplan"><img src="images/icon-insta.png" alt="instagram icon"></a>
-                <a href="https://linkedin.com/in/akaplan"><img src="images/icon-linkedin.png" alt="icon linkedin"></a>
-                <a href="tel:+16418765432"><img src="images/icon-whatsapp.png" alt="whatspp icon"></a>
+                <a href="https://instagram.com/akaplan"><img src="icon-insta.png" alt="instagram icon"></a>
+                <a href="https://linkedin.com/in/akaplan"><img src="icon-linkedin.png" alt="icon linkedin"></a>
+                <a href="tel:+16418765432"><img src="icon-whatsapp.png" alt="whatspp icon"></a>
             </div>
             <a href="http://validator.w3.org/check?uri=referer" onclick="this.href='http://validator.w3.org/check?uri=' + 
        document.URL"><img class="validator" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML!" height="31" width="88" /></a>
